--- a/styles/global.css
+++ b/styles/global.css
@@ -1,26 +1,39 @@
+:root {
+	--color-primary: #1b91ff;
+	--sides-padding: 30px;
+	--appbar-height: 60px;
+}
+
 html,
 body {
-    padding: 0;
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    line-height: 1.6;
-    font-size: 18px;
+	font-family: Roboto, Helvetica, Arial, sans-serif;
+	line-height: 1.6;
+	font-size: 18px;
 }
 
 * {
-    box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
 a {
-    color: #0070f3;
-    text-decoration: none;
+	color: var(--color-primary);
+	text-decoration: none;
 }
 
 a:hover {
-    text-decoration: underline;
+	text-decoration: underline;
 }
 
 img {
-    max-width: 100%;
-    display: block;
+	max-width: 100%;
+	display: block;
+}
+
+@media (max-width: 600px) {
+	html,
+	body {
+		font-size: 16px;
+	}
 }
