chore: run yarn format and yarn lint

--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -1,7 +1,7 @@
 .container {
   height: 100vh;
 
-  background: url("/background.svg");
+  background: url('/background.svg');
   background-position: bottom right;
   background-repeat: no-repeat;
   background-attachment: fixed;
